css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* -------------------- General Styles -------------------- */

html {
  font-size: 16px;
  background-color: #202322;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
}

h1 {
  color: #e2e3ed;
  font-size: 3.75em;
}

h2 {
font-family: 'Poppins', sans-serif;
color: #e2e3ed;
font-size: 2.25em;
}

h3, h4 {
font-family: 'Poppins', sans-serif;
color: #e2e3ed;
font-size: 1.875em;
}

p {
  color: #e2e3ed;
  font-size: 1.125em;
  line-height: 1.5em;
}

a {
  color: #e2e3ed;
  text-decoration: none;
}

address {
  font-family: 'Open Sans', sans-serif;
  color: #9d9ea4;
  font-size: 1em; 
}

.content-wrapper {
  width: 90%;
  margin: 50px 0;
}

aside .form {
  margin-top: 30px;
}
 
input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
}
 
input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}


 /* -------------------- Base Header - Footer Styles -------------------- */

header,
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

header {
  padding: 15px 0;
}

.header-divider {
  width: 100%;
  height: 1px;
  margin: 10px 0 20px 0;

}

header nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: row wrap;
  width: 60%;
}

header nav ul {
  display: flex;
  justify-content: space-around;
  width: 100%;
  list-style-type: none;
}

header nav ul li {
  text-transform: uppercase;
  font-weight: bold;
}

header .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 0;
}


footer {
  flex-direction: column;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0;
}

footer p {
  margin: 0;
  color: #ffffff;
}

/* -------------------- Home Page Styles -------------------- */
 
 aside {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #527158;
 }

 .contact-section {
   flex-flow: row wrap;
 }

.faq {
  flex-flow: row wrap;
}

.content-wrapper {
  width: 90%;
  margin: 50px 0;
}

 .hero-area {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: row wrap;
 }

/* -------------------- Features -------------------- */

 .features {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
 }

 .features article {
  width: 63%;
  margin: 30px 0;
}

 .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }

 .features p {
   margin: 0;
   color: #e1e2ea;
 }

 .mission {
  flex-wrap: row wrap;
}

/* -------------------- Reviews -------------------- */

 .reviews {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #2a423a;
}

.reviews h3 {
  width: 65%;
}

/* -------------------- Article -------------------- */
 article {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  width: 66%;
 }


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}
/* ... */

